# llm-audit

./: .gitignore  README.md  add_impls.py  files_to_audit.json  judge.py  main.py  openai_client.py  pyproject.toml  render.yaml  test.py  utils.py
contract_overviews/: Escrow.pkl  LiquidProxy.pkl  LiquidRon.pkl  MergeTgt.pkl  Pausable.pkl  Titn.pkl
contracts/: EtherBank.sol
dataset/2025-01-liquid-ron/flattened/: LiquidProxy.flattened.sol  LiquidRon.flattened.sol  Pausable.flattened.sol  ValidatorTracker.flattened.sol
dataset/2025-01-liquid-ron/flattened_with_impls/: Escrow.with_impls.sol  RonHelper.with_impls.sol
dataset/2025-02-thorwallet/flattened/: IERC677Receiver.flattened.sol  IMerge.flattened.sol  Titn.flattened.sol
dataset/2025-02-thorwallet/flattened_with_impls/: MergeTgt.with_impls.sol  Titn.with_impls.sol
dataset/2025-03-nudgexyz/flattened/: INudgeCampaign.flattened.sol  INudgeCampaignFactory.flattened.sol  INudgePointsCampaign.flattened.sol  NudgeCampaign.flattened.sol  NudgePointsCampaigns.flattened.sol
dataset/2025-03-nudgexyz/flattened_with_impls/: IBaseNudgeCampaign.with_impls.sol  INudgeCampaign.with_impls.sol  INudgeCampaignFactory.with_impls.sol  (+2 more)
src/: add_impls.py  firebase_client.py  flatten.py  judge.py  main.py  openai_client.py  projects_to_audit.json  run_evals.py  start.py  utils.py  view_eval_result.py
src/lib/: langfuse_client.py
src/scripts/: cleanup.py  count_targets.py  move.py  save_files_to_audit.py  view_eval_result.py
targets/2025-01-liquid-ron/: findings.json
targets/2025-03-nudgexyz/: findings.json
