[project]
name = "hello-slither"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.6",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "slither-analyzer>=0.11.3",
    "termcolor>=3.1.0",
    "tiktoken>=0.11.0",
]
