[project]
name = "hello-slither"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "apscheduler>=3.11.0",
    "backoff>=2.2.1",
    "firebase-admin>=7.1.0",
    "httpx[http2]>=0.28.1",
    "langfuse>=3.5.1",
    "matplotlib>=3.10.6",
    "openai>=1.108.1",
    "python-dotenv>=1.1.1",
    "slither-analyzer>=0.11.3",
    "termcolor>=3.1.0",
    "tiktoken>=0.11.0",
    "tqdm>=4.67.1",
]
